  value is returned for an unassigned codepoints now.

* layoutAboutToBeChanged is no longer emitted by QAbstractItemModel::beginMoveRows.
  layoutChanged is no longer emitted by QAbstractItemModel::endMoveRows. Proxy models
  should now also connect to (and disconnect from) the rowsAboutToBeMoved and
  rowsMoved signals.

* The default value of the property QSortFilterProxyModel::dynamicSortFilter was
  changed from false to true.

* The signature of the virtual QAbstractItemView::dataChanged method has changed to
  include the roles which have changed. The signature is consistent with the dataChanged
  signal in the model.

* QFileSystemWatcher is now able to return failure in case of errors whilst
  altering the watchlist in both the singular and QStringList overloads of
  addPath and removePath.

* QString::mid, QString::midRef and QByteArray::mid, if the position passed
  is equal to the length (that is, right after the last character/byte),
  now return an empty QString, QStringRef or QByteArray respectively.
  in Qt 4 they returned a null QString or a null QStringRef.

* QString methods toLongLong(), toULongLong(), toLong(), toULong(), toInt(),
  toUInt(), toShort(), toUShort(), toDouble(), and toFloat() no longer use the
  default or system locale, they will always use the C locale. This is to
  guarantee consistent default conversion of strings. For locale-aware conversions
  use the equivalent QLocale methods.

* QDate, QTime, and QDateTime have undergone important behavioural changes:
  * QDate only implements the Gregorian calendar, the switch to the Julian
    calendar before 1582 has been removed. This means all QDate methods will
    return different results for dates prior to 15 October 1582, and there is
    no longer a gap between 4 October 1582 and 15 October 1582.
  * QDate::setYMD() is deprecated, use QDate::setDate() instead
  * Most methods now apply strict validity checks and will return appropriate